fixed menu spacing and english version

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4646,7 +4646,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #fff;
   background-color:grey;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
     border-color: #080808;
   }
